Closed Bug 1743707 Opened 2 years ago Closed 2 years ago

mozilla/dom/RTCConfigurationBinding.h file not found with --disable-webrtc

Categories

(Core :: WebRTC, defect, P2)

defect

Tracking

()

RESOLVED FIXED
97 Branch
Tracking Status
firefox97 --- fixed

People

(Reporter: glandium, Assigned: mjf)

Details

Attachments

(1 file)

ipc/ipdl/_ipdlheaders/mozilla/dom/PMediaTransportChild.h:18:10: fatal error: 'mozilla/dom/RTCConfigurationBinding.h' file not found
#include "mozilla/dom/RTCConfigurationBinding.h"
         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

I'll have a chance to look at this tomorrow.

Assignee: nobody → mfroman
Severity: -- → S3
Priority: -- → P2
Pushed by mfroman@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b093486a9b0e
fix --disable-webrtc builds due to missing RTCConfigurationBinding.h r=ipc-reviewers,nika
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 97 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: