Bug 1743707 - fix --disable-webrtc builds due to missing RTCConfigurationBinding.h r=ipc-reviewers,nika

Differential Revision: https://phabricator.services.mozilla.com/D133126